--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Beautiful CV Template</title>
+    <title>Renan</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -28,7 +28,7 @@
                   <a class="nav-link" href="#skills">Habilidades</a>
                 </li>
                 <li class="nav-item item">
-                    <a class="nav-link" href="#hobbies">Hobbies</a>
+                    <a class="nav-link" href="#hobbies">Passatempos</a>
                 </li>
               </li>
             </ul>
@@ -41,7 +41,7 @@
           <div class="avatar">
             <img class="img-fluid rounded-circle" src="assets/img/renan.jpg">
           </div>
-          <p>Olá! Eu sou o <strong>Renan</strong>.Atualmente eu trabalho como Operador de Sistemas na Empreza GPR Nutrição Animal.</p>
+          <p>Olá! Eu sou o <strong>Renan</strong>.Atualmente eu trabalho como Operador de Sistemas na Empresa GPR Nutrição Animal.</p>
           <a href="#" class="btn btn-outline-primary">Contrate-me</a>
         </div>
       </section>
@@ -85,19 +85,19 @@
                   <time class="period">04/2018 - Atual</time>
                 </div>
               </div>
-              <p class="text-muted">Tecnico em desenvolvimento Web.</p>
+              <p class="text-muted">Técnico em desenvolvimento Web.</p>
             </div>
             <div class="item">
               <div class="row">
                 <div class="col-md-6">
                   <h3>Escola</h3>
-                  <h4 class="organization">Eeem Professor Joao Germano Imlau</h4>
+                  <h4 class="organization">Eeem Professor João Germano Imlau</h4>
                 </div>
                 <div class="col-md-6">
                   <time class="period">02/2013 - 12/2015</time>
                 </div>
               </div>
-              <p class="text-muted">Ensino Medio.</p>
+              <p class="text-muted">Ensino Médio.</p>
             </div>
             <div class="item">
               <div class="row">
@@ -183,10 +183,10 @@
             </div>
           </div>
           <div class="hobbies group" id="hobbies">
-            <h2 class="text-center">Hobbies</h2>
+            <h2 class="text-center">Passatempos</h2>
             <p class="text-center text-muted">Meu tempo livre eu gasto jogando:</p>
             <p class="text-center text-muted">Jogando jogos de Computador.</p>
-            <p class="text-center text-muted">Jogando Futibool.</p>
+            <p class="text-center text-muted">Jogando Futebol.</p>
             <p class="text-center text-muted">Sai pra comer fora.</p>
           </div>
         </div>
