--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img class="img-fluid rounded-circle" src="assets/img/renan.jpg">
           </div>
           <p>Olá! Eu sou o <strong>Renan</strong>.Atualmente eu trabalho como Operador de Sistemas na Empresa GPR Nutrição Animal.</p>
-          <a href="#" class="btn btn-outline-primary">Contrate-me</a>
+          <a href="#skills" class="btn btn-outline-primary">Contrate-me</a>
         </div>
       </section>
       <section class="cv-block info">
