--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
           <a href="#skills" class="btn btn-outline-primary">Contrate-me</a>
         </div>
       </section>
-      <section class="cv-block info">
+      <section class="cv-block info" id="work-experience">
         <div class="container">
-          <div class="work-experience group" id="work-experience">
+          <div class="work-experience group">
             <h2 class="text-center">Experiência de trabalho</h2>
             <div class="item">
               <div class="row">
