--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
           </div>
       </div>
     </nav>
-    <main class="page cv-page">
+    <main class="page cv-page" id="work-experience">
       <section class="cv-block block-intro border-bottom">
         <div class="container">
           <div class="avatar">
             <img class="img-fluid rounded-circle" src="assets/img/renan.jpg">
           </div>
           <p>Olá! Eu sou o <strong>Renan</strong>.Atualmente eu trabalho como Operador de Sistemas na Empresa GPR Nutrição Animal.</p>
-          <a href="#skills" class="btn btn-outline-primary" id="work-experience">Contrate-me</a>
+          <a href="#skills" class="btn btn-outline-primary">Contrate-me</a>
         </div>
       </section>
       <section class="cv-block info">
