--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                   <h3>Masseiro</h3>
                   <h4 class="organization">Zin Pão - Industria de Alimentos.</h4>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6" id="education">
                   <time class="period">01/03/2017 - 30/11/2018</time>
                 </div>
               </div>
               <p class="text-muted"></p>
             </div>
-          <div class="education group" id="education">
+          <div class="education group">
             <h2 class="text-center">Educação</h2>
             <div class="item">
               <div class="row">
