--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   <h3>Escola</h3>
                   <h4 class="organization">Escola Municipal de Ensino Fundamental Luiz Badalotti</h4>
                 </div>
-                <div class="col-md-6" id="skills">
+                <div class="col-md-6">
                   <time class="period">02/2004 - 12/2012</time>
                 </div>
               </div>
@@ -119,7 +119,7 @@
           </br>
           </br>
           </br>
-          <div class="group">
+          <div class="group" id="#skills">
             <div class="row">
               <div class="col-md-6">
                 <div class="skills info-card">
