--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
           <div class="avatar">
             <img class="img-fluid rounded-circle" src="assets/img/renan.jpg">
           </div>
-          <p>Olá! Eu sou o <strong>Renan</strong>.Atualmente eu trabalho como Operador de Sistemas na Empresa GPR Nutrição Animal.</p>
+          <p id="work-experience" >Olá! Eu sou o <strong>Renan</strong>.Atualmente eu trabalho como Operador de Sistemas na Empresa GPR Nutrição Animal.</p>
           <a href="#skills" class="btn btn-outline-primary">Contrate-me</a>
         </div>
       </section>
-      <section class="cv-block info" id="work-experience">
+      <section class="cv-block info" >
         <div class="container">
           <div class="work-experience group">
             <h2 class="text-center">Experiência de trabalho</h2>
