--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
           </div>
       </div>
     </nav>
-    <main class="page cv-page" id="work-experience">
+    <main class="page cv-page" >
       <section class="cv-block block-intro border-bottom">
         <div class="container">
-          <div class="avatar">
+          <div class="avatar" id="work-experience">
             <img class="img-fluid rounded-circle" src="assets/img/renan.jpg">
           </div>
           <p >Olá! Eu sou o <strong>Renan</strong>.Atualmente eu trabalho como Operador de Sistemas na Empresa GPR Nutrição Animal.</p>
