--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           <a href="#skills" class="btn btn-outline-primary">Contrate-me</a>
         </div>
       </section>
-      <section class="cv-block info" id="work-experience">
+      <section class="cv-block info">
         <div class="container">
           <div class="work-experience group">
-            <h2 class="text-center">Experiência de trabalho</h2>
+            <h2 class="text-center" id="work-experience" >Experiência de trabalho</h2>
             <div class="item">
               <div class="row">
                 <div class="col-md-6">
