--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </div>
       </section>
       <section class="cv-block info">
-        <div class="container">
+        <div class="container" id="work-experience">
           <div class="work-experience group">
-            <h2 class="text-center" id="work-experience" >Experiência de trabalho</h2>
+            <h2 class="text-center"  >Experiência de trabalho</h2>
             <div class="item">
               <div class="row">
                 <div class="col-md-6">
