--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <a href="#skills" class="btn btn-outline-primary">Contrate-me</a>
         </div>
       </section>
-      <section class="cv-block info">
-        <div class="container" id="work-experience">
+      <section class="cv-block info" id="work-experience">
+        <div class="container" >
           <div class="work-experience group">
             <h2 class="text-center"  >Experiência de trabalho</h2>
             <div class="item">
