--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           <p >Olá! Eu sou o <strong>Renan</strong>.Atualmente eu trabalho como Operador de Sistemas na Empresa GPR Nutrição Animal.</p>
           <a href="#skills" class="btn btn-outline-primary">Contrate-me</a>
         </div>
-      </section>
-      <section class="cv-block info" id="work-experience">
+      </section id="work-experience">
+      <section class="cv-block info">
         <div class="container" >
           <div class="work-experience group">
             <h2 class="text-center"  >Experiência de trabalho</h2>
