--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           </div>
           <p >Olá! Eu sou o <strong>Renan</strong>.Atualmente eu trabalho como Operador de Sistemas na Empresa GPR Nutrição Animal.</p>
           <a href="#skills" class="btn btn-outline-primary">Contrate-me</a>
-        </div>
-      </section id="work-experience">
+        </div id="work-experience">
+      </section>
       <section class="cv-block info">
         <div class="container" >
           <div class="work-experience group">
