--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     <main class="page cv-page" >
       <section class="cv-block block-intro border-bottom">
         <div class="container">
-          <div class="avatar" id="work-experience">
+          <div class="avatar">
             <img class="img-fluid rounded-circle" src="assets/img/renan.jpg">
           </div>
           <p >Olá! Eu sou o <strong>Renan</strong>.Atualmente eu trabalho como Operador de Sistemas na Empresa GPR Nutrição Animal.</p>
           <a href="#skills" class="btn btn-outline-primary">Contrate-me</a>
         </div>
       </section>
-      <section class="cv-block info">
+      <section class="cv-block info" id="work-experience">
         <div class="container" >
           <div class="work-experience group">
             <h2 class="text-center"  >Experiência de trabalho</h2>
