--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </br>
           </br>
           </br>
-          <div class="group" id="#skills">
+          <div class="group" id="skills">
             <div class="row">
               <div class="col-md-6">
                 <div class="skills info-card">
