--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="#education">Educação</a>
                 </li>
                 <li class="nav-item item">
-                  <a class="nav-link" href="#skills">Habilidades</a>
+                  <a class="nav-link" href="#ski">Habilidades</a>
                 </li>
                 <li class="nav-item item">
                     <a class="nav-link" href="#hobbies">Passatempos</a>
@@ -119,7 +119,7 @@
           </br>
           </br>
           </br>
-          <div class="group" id="skills">
+          <div class="group" id="ski">
             <div class="row">
               <div class="col-md-6">
                 <div class="skills info-card">
