--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
           <a href="#skills" class="btn btn-outline-primary">Contrate-me</a>
         </div>
       </section>
+      <div id="work-experience" ></div>
       <section class="cv-block info" >
         <div class="container">
-          <div class="work-experience group" id="work-experience">
+          <div class="work-experience group">
             <h2 class="text-center"  >Experiência de trabalho</h2>
             <div class="item">
               <div class="row">
