--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <a href="#skills" class="btn btn-outline-primary">Contrate-me</a>
         </div>
       </section>
-      <div id="work-experience" ></div>
+      <div id="work-experience" ></br></br></div>
       <section class="cv-block info" >
         <div class="container">
           <div class="work-experience group">
